<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fonfoo"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="396dp"
        android:layout_height="181dp"
        android:fontFamily="@font/alfa_slab_one"
        android:text="@string/descubramos_tu_frecuencia_cardiaca_maxima"
        android:textAlignment="center"
        android:textColor="#D8D6D6"
        android:textSize="34sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="540dp"
        android:layout_height="243dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.325"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/cardiaca"
        android:contentDescription="@string/todo" />

    <Button
        android:id="@+id/btnCalcular"
        android:layout_width="409dp"
        android:layout_height="56dp"
        android:backgroundTint="#931515"
        android:fontFamily="@font/acme"
        android:text="@string/calcular"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.724" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/amaranth_bold_italic"
        android:text="@string/tu_frecuencia_cardiaca"
        android:textColor="#CDCBCB"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView"
        app:layout_constraintVertical_bias="0.872" />

    <TextView
        android:id="@+id/txtRes"
        android:layout_width="382dp"
        android:layout_height="49dp"
        android:fontFamily="@font/allan"
        android:textAlignment="center"
        android:textColor="#D1CECE"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.961" />

    <Button
        android:id="@+id/btnintegrantes"
        android:layout_width="415dp"
        android:layout_height="57dp"
        android:backgroundTint="#931515"
        android:text="@string/integrantes"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.808" />

    <EditText
        android:id="@+id/edtedad"
        android:layout_width="355dp"
        android:layout_height="58dp"
        android:backgroundTint="#F8F5F5"
        android:ems="10"
        android:fontFamily="@font/allan"
        android:hint="@string/ingresa_tu_edad"
        android:inputType="number"
        android:textColor="#FAF8F8"
        android:textColorHint="#FAF6F6"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.678"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.274" />
</androidx.constraintlayout.widget.ConstraintLayout>